--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <div class="contact-info-upper-container">
         <div class="contact-info-container">
             <img src="./assets/email.png" alt="email icon" class="icon contact-icon">
-            <p><a href="mailto:exampleemail@gmail.com">Example@gmail.com</a></p>
+            <p><a href="mailto:bishalw1999@gmail.com">Example@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
             <img src="./assets/linkedin.png" alt="linked in icon" class="icon contact-icon">
